Fixed nav bar, added hover, zoom, and collapse effects

--- a/Styles/pages.css
+++ b/Styles/pages.css
@@ -1,18 +1,23 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
+    padding-top: 35px;
+    margin-right: 20px;
     background-color: #1B4543;
     font-family: Merriweather, Arial;
     color: #B3D0C6;
   }
-  
-  .first-subheading {
-    padding-top: 10px;
-    margin-top: 45px;
-    margin-bottom: 12px;
-  }
-  
+
   .subheading {
     padding-top: 5px;
     margin-top: 8px;
+    text-align: center;
+    font-size: 3rem;
+    border-top: 2px solid #B3D0C6;
+    border-bottom: 2px solid #B3D0C6;
+    padding-bottom: 5px;
     margin-bottom: 12px;
   }
   
@@ -22,6 +27,23 @@ body {
     object-fit: cover;
     display: block;
     border: 5px solid #0c1f1e;
+    transition: 0.3s;
+  }
+
+  .zoomed-in {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transition: 0.2s;
+    z-index: 1000;
+    background-color: #1B4543;
+  }
+
+  .photo:hover:not(.zoomed-in) {
+    transform: scale(1.05);
   }
   
   .photos {
@@ -35,6 +57,12 @@ body {
     column-gap: 15px;
     row-gap: 15px;
     margin-bottom: 0;
+  }
+
+  .grid-container.collapsed {
+    max-height: 0px;
+    opacity: 0;
+    pointer-events: none;
   }
   
   @media (max-width: 750px) {
